--- a/Report/Report.html
+++ b/Report/Report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,101002],[],[[4,0,5,[],[1,2368,98634],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,6047],[],[[4,0,5,[],[0,1674,4373,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC 002 DropdownList","*C:\\Users\\user\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\TestCases\\TC_002_DropdownList.robot","*../TestCases/TC_002_DropdownList.robot","*Robot First Test Case","*<p>This test cases is to check registration functionality of Application\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC 002 DropdownList","*C:\\Users\\user\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\TestCases\\TC_002_DropdownList.robot","*../TestCases/TC_002_DropdownList.robot","*Robot First Test Case","*<p>This test cases is to check registration functionality of Application\x3c/p>","*SessionNotCreatedException: Message: session not created: This version of ChromeDriver only supports Chrome version 92\nCurrent browser version is 94.0.4606.61 with binary path C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe\n"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:39","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:41","fail":0,"id":"s1","label":"TC 002 DropdownList","name":"TC 002 DropdownList","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"TC 002 DropdownList","name":"TC 002 DropdownList","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1630794333402;
+window.output["baseMillis"] = 1633006044618;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 101202;
+window.output["generated"] = 6169;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
