--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,15139],[],[[4,0,0,[],[0,3126,11984,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,7749],[],[[4,0,0,[],[1,393,7353],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Claims Portal","*C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\aYoWebApps\\PortalTestCases\\Claims_Portal.robot","*../aYoWebApps/PortalTestCases/Claims_Portal.robot","*TC_001 Claims Portal","*Variable '${UsernameTextBox}' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC 001 Start Close Browser","*C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\TestCases\\TC_001_Start_Close_Browser.robot","*TestCases/TC_001_Start_Close_Browser.robot","*Robot First Test Case"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:15","fail":1,"id":"s1","label":"Claims Portal","name":"Claims Portal","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"TC 001 Start Close Browser","name":"TC 001 Start Close Browser","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1641907211535;
+window.output["baseMillis"] = 1653517922437;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 15196;
+window.output["generated"] = 7781;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
