--- a/log.html
+++ b/log.html
@@ -1799,25 +1799,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7749],[],[[4,0,0,[],[1,393,7353],[[0,5,6,0,7,8,0,0,[1,394,6579],[[8,394,2,9]]],[0,10,6,0,11,0,0,0,[1,6973,136],[]],[0,12,6,0,13,14,0,0,[1,7111,3],[]],[0,15,6,0,16,0,17,0,[1,7115,1],[[8,7116,2,18]]],[0,19,20,0,21,17,0,0,[1,7117,1],[]],[0,22,6,0,23,24,0,0,[1,7118,21],[]],[0,25,6,0,26,27,0,0,[1,7139,186],[[8,7140,2,28]]],[0,25,6,0,26,29,0,0,[1,7326,149],[[8,7326,2,30]]],[0,31,6,0,32,33,0,0,[1,7475,71],[[8,7475,2,34]]],[0,35,6,0,36,37,0,0,[1,7547,88],[[8,7547,2,38]]],[0,39,6,0,40,41,0,0,[1,7636,109],[[8,7636,2,42]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,16485],[],[[4,0,0,[],[0,98,16384,5],[[0,6,7,0,0,0,0,0,[1,99,5312],[[8,111,2,8],[8,117,2,9],[8,2297,2,10]]],[0,11,7,0,12,13,0,0,[1,5412,33],[[8,5445,2,14]]],[0,15,7,0,16,17,0,0,[0,5445,11028],[[8,16472,2,18],[8,16472,2,19],[8,16473,5,5]]],[0,20,7,0,21,22,0,0,[3,16482,0],[]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC 001 Start Close Browser","*C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\TestCases\\TC_001_Start_Close_Browser.robot","*TestCases/TC_001_Start_Close_Browser.robot","*Robot First Test Case","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${Browser}","*Opening browser 'Chrome' to base url '<a href=\"http://www.thetestingworld.com/testings\">http://www.thetestingworld.com/testings\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Timeout","*<p>Sets the timeout that is used by various keywords.\x3c/p>","*20 seconds","*Get Selenium Timeout","*<p>Gets the timeout that is used by various keywords.\x3c/p>","*${tm}","*${tm} = 20 seconds","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Testing","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name:fld_username, Aisha_H","*Typing text 'Aisha_H' into text field 'name:fld_username'.","*<a href=\"xpath://input[@name='fld_email\">xpath://input[@name='fld_email\x3c/a>'], ash.hlatshwayo22@gmail.com","*Typing text 'ash.hlatshwayo22@gmail.com' into text field '<a href=\"xpath://input[@name='fld_email\">xpath://input[@name='fld_email\x3c/a>']'.","*Select Radio Button","*<p>Sets the radio button group <code>group_name\x3c/code> to <code>value\x3c/code>.\x3c/p>","*add_type, office","*Selecting 'office' from radio button 'add_type'.","*Select Checkbox","*<p>Selects the checkbox identified by <code>locator\x3c/code>.\x3c/p>","*name:terms","*Selecting checkbox 'name:terms'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://input[@type='submit\">xpath://input[@type='submit\x3c/a>']","*Clicking button '<a href=\"xpath://input[@type='submit\">xpath://input[@type='submit\x3c/a>']'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC 0001","*C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\SikuliTestCases\\TC_0001.robot","*SikuliTestCases/TC_0001.robot","*TC_0001 Start Browser on Windows","*com.github.rainmanwy.robotframework.sikulilib.exceptions.TimeoutException: Timeout happened, could not find P(Start.png -- not valid!) S: 0.699999988079071","*Start Sikuli Process","*SikuliLibrary","*Starting process:\njava -jar C:\\Python3.10\\lib\\site-packages\\SikuliLibrary\\lib\\SikuliLibrary.jar 3848 C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation","*Start sikuli java process on port 3848","*Sikuli java process is started","*Add Image Path","*<p>Add image path\x3c/p>","*C:\\Users\\Aisha\\Desktop\\SikuliImages","*[error] ImagePath: addHTTP: not possible: C:UsersAishaDesktopSikuliImages\njava.net.MalformedURLException: For input string: \"UsersAishaDesktopSikuliImages\"","*Wait Until Screen Contain","*<p>Wait until screen contain Wait until image shown in screen\x3c/p>","*Start.png, 10","*[error] ImagePath: find: not there: Start.png","*<img src='sikuli_captured/sikuliximage-1655762352010.png'/>\n[error] ImagePath: find: not there: Start.png","*Double Click","*<p>Double click\x3c/p>","*Start.png"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"TC 001 Start Close Browser","name":"TC 001 Start Close Browser","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:16","fail":1,"id":"s1","label":"TC 0001","name":"TC 0001","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1653517922437;
+window.output["baseMillis"] = 1655762335921;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7781;
+window.output["generated"] = 16522;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
