--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7749],[],[[4,0,0,[],[1,393,7353],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,16485],[],[[4,0,0,[],[0,98,16384,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC 001 Start Close Browser","*C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\TestCases\\TC_001_Start_Close_Browser.robot","*TestCases/TC_001_Start_Close_Browser.robot","*Robot First Test Case"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC 0001","*C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\SikuliTestCases\\TC_0001.robot","*SikuliTestCases/TC_0001.robot","*TC_0001 Start Browser on Windows","*com.github.rainmanwy.robotframework.sikulilib.exceptions.TimeoutException: Timeout happened, could not find P(Start.png -- not valid!) S: 0.699999988079071"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"TC 001 Start Close Browser","name":"TC 001 Start Close Browser","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:16","fail":1,"id":"s1","label":"TC 0001","name":"TC 0001","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1653517922437;
+window.output["baseMillis"] = 1655762335921;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7781;
+window.output["generated"] = 16522;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
