Basic understanding of API Testing

--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,16485],[],[[4,0,0,[],[0,98,16384,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,2429],[],[[4,0,0,[],[1,272,2153],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC 0001","*C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\SikuliTestCases\\TC_0001.robot","*SikuliTestCases/TC_0001.robot","*TC_0001 Start Browser on Windows","*com.github.rainmanwy.robotframework.sikulilib.exceptions.TimeoutException: Timeout happened, could not find P(Start.png -- not valid!) S: 0.699999988079071"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC 002 Get Request","*C:\\Users\\Aisha\\PycharmProjects\\pythonProject\\pythonProject\\RobotAutomation\\REST-APITest\\TC_002_Get_Request.robot","*REST-APITest/TC_002_Get_Request.robot","*TC_002_Fetch_student_details_by_id"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:16","fail":1,"id":"s1","label":"TC 0001","name":"TC 0001","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:02","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"TC 002 Get Request","name":"TC 002 Get Request","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1655762335921;
+window.output["baseMillis"] = 1655849193942;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16522;
+window.output["generated"] = 2452;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
